argo/ingress/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-server
  namespace: argo
  annotations:
    # https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/
    ingress.kubernetes.io/proxy-body-size: 100M
    ingress.kubernetes.io/app-root: "/"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  # check the pod with the ingress controller and look for --ingress-class=<classname>, in v20 it's 'public'
  ingressClassName: public
  tls:
  - hosts:
    - argo.local.test
    secretName: argo-workflows-secret
  rules:
  - host: argo.h0.local.test
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: argo-server
            port:
              number: 2746
