argo/ingress/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: argo
  name: minio
spec:
  rules:
    - host: minio.h0.local.test
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: minio
              port:
                number: 9001
